--- a/home/templates/blog-home.html
+++ b/home/templates/blog-home.html
@@ -15,7 +15,7 @@
 							<p class="text-white">
 								There is a moment in the life of any aspiring astronomer that it is time to buy that first
 							</p>
-							<a href="blog-single.html" class="primary-btn">View More</a>
+							<a href="blog-single" class="primary-btn">View More</a>
 						</div>	
 					</div>
 				</div>
