--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -22,7 +22,7 @@
 				<div class="container">
 					<div class="row align-items-center justify-content-between">
 						<div class="col-lg-6 col-md-6 home-about-left">
-							<img class="img-fluid" src="img/about-img.png" alt="">
+							<img class="img-fluid" src="{% static 'img/about-img.png' %} " alt="">
 						</div>
 						<div class="col-lg-5 col-md-6 home-about-right">
 							<h6>About Me</h6>
@@ -105,7 +105,7 @@
 			    </li>
 			    <li>
 			      <div class="content">
-			      	<img class="img-fluid mx-auto d-block mb-30" src="img/about/c-logo.png" alt="">
+			      	<img class="img-fluid mx-auto d-block mb-30" src="{% static 'img/about/c-logo.png' %} " alt="">
 			        <h4>
 			          <time>Creative Content Developer</time>
 			        </h4>
