--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -123,7 +123,7 @@
 			    </li>
 			    <li>
 			      <div class="content">
-			      	<img class="img-fluid mx-auto d-block mb-30" src="img/about/c-logo.png" alt="">
+			      	<img class="img-fluid mx-auto d-block mb-30" src="{% static 'img/about/c-logo.png' %}" alt="">
 			        <h4>
 			          <time>Senior UI/UX Designer</time>
 			        </h4>
@@ -160,7 +160,7 @@
 		                <div class="active-testimonial">
 		                    <div class="single-testimonial item d-flex flex-row">
 		                        <div class="thumb">
-		                            <img class="img-fluid" src="img/elements/user1.png" alt="">
+		                            <img class="img-fluid" src="{% static 'img/elements/user1.png' %}" alt="">
 		                        </div>
 		                        <div class="desc">
 		                            <p>
@@ -172,7 +172,7 @@
 		                    </div>
 		                    <div class="single-testimonial item d-flex flex-row">
 		                        <div class="thumb">
-		                            <img class="img-fluid" src="img/elements/user2.png" alt="">
+		                            <img class="img-fluid" src="{% static 'img/elements/user2.png' %}" alt="">
 		                        </div>
 		                        <div class="desc">
 		                            <p>
