--- a/home/templates/portfolio.html
+++ b/home/templates/portfolio.html
@@ -44,11 +44,11 @@
                             	<div class="relative">
 	                            	<div class="thumb">
 	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p1.jpg" alt="">
+	                            		 <img class="image img-fluid" src="{% static 'img/p1.jpg' %}" alt="">
 	                            	</div>
 									<a href="img/p1.jpg" class="img-pop-up">	
 									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+									    <div class="text align-self-center d-flex"><img src="{% static 'img/preview.png' %}" alt=""></div>
 									  </div>
 								</a>                              		
                             	</div>
@@ -61,11 +61,11 @@
                             	<div class="relative">
 	                            	<div class="thumb">
 	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p2.jpg" alt="">
+	                            		 <img class="image img-fluid" src="{% static 'img/p2.jpg' %}" alt="">
 	                            	</div>
-									<a href="img/p2.jpg" class="img-pop-up">	
+									<a href="{% static 'img/p2.jpg' %}" class="img-pop-up">	
 									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+									    <div class="text align-self-center d-flex"><img src="{% static 'img/preview.png' %}" alt=""></div>
 									  </div>
 								</a>                              		
                             	</div>
@@ -78,11 +78,11 @@
                             	<div class="relative">
 	                            	<div class="thumb">
 	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p3.jpg" alt="">
+	                            		 <img class="image img-fluid" src="{% static 'img/p3.jpg' %}" alt="">
 	                            	</div>
-									<a href="img/p3.jpg" class="img-pop-up">	
+									<a href="{% static 'img/p3.jpg' %}" class="img-pop-up">	
 									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+									    <div class="text align-self-center d-flex"><img src="{% static 'img/preview.png' %}" alt=""></div>
 									  </div>
 									</a> 
 	                            		
@@ -96,11 +96,11 @@
                             	<div class="relative">
 	                            	<div class="thumb">
 	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p4.jpg" alt="">
+	                            		 <img class="image img-fluid" src="{% static 'img/p4.jpg' %}" alt="">
 	                            	</div>
-									<a href="img/p4.jpg" class="img-pop-up">	
+									<a href="{% static 'img/p4.jpg' %}" class="img-pop-up">	
 									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+									    <div class="text align-self-center d-flex"><img src="{% static 'img/preview.png' %}" alt=""></div>
 									  </div>
 									</a>                            		
                             	</div> 
@@ -113,11 +113,11 @@
                             	<div class="relative">
                             	<div class="thumb">
 	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p5.jpg" alt="">
+	                            		 <img class="image img-fluid" src="{% static 'img/p5.jpg' %}" alt="">
 	                            	</div>
-									<a href="img/p5.jpg" class="img-pop-up">	
+									<a href="{% static 'img/p5.jpg' %}" class="img-pop-up">	
 									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+									    <div class="text align-self-center d-flex"><img src="{% static 'img/preview.png' %}" alt=""></div>
 									  </div>
 									</a>                             		
                             	</div>
@@ -130,11 +130,11 @@
                             	<div class="relative">
 	                            	<div class="thumb">
 	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p6.jpg" alt="">
+	                            		 <img class="image img-fluid" src="{% static 'img/p6.jpg' %}" alt="">
 	                            	</div>
-									<a href="img/p6.jpg" class="img-pop-up">	
+									<a href="{% static 'img/p6.jpg' %}" class="img-pop-up">	
 									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+									    <div class="text align-self-center d-flex"><img src="{% static 'img/preview.png' %}" alt=""></div>
 									  </div>
 									</a>                             		
                             	</div>
