--- a/home/templates/services.html
+++ b/home/templates/services.html
@@ -217,7 +217,7 @@
 		                <div class="active-testimonial">
 		                    <div class="single-testimonial item d-flex flex-row">
 		                        <div class="thumb">
-		                            <img class="img-fluid" src="img/elements/user1.png" alt="">
+		                            <img class="img-fluid" src="{% static 'img/elements/user1.png' %}" alt="">
 		                        </div>
 		                        <div class="desc">
 		                            <p>
@@ -229,7 +229,7 @@
 		                    </div>
 		                    <div class="single-testimonial item d-flex flex-row">
 		                        <div class="thumb">
-		                            <img class="img-fluid" src="img/elements/user2.png" alt="">
+		                            <img class="img-fluid" src="{% static 'img/elements/user2.png' %}" alt="">
 		                        </div>
 		                        <div class="desc">
 		                            <p>
