database and model commit

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -169,7 +169,7 @@
 								<div class="overlay overlay-bg"></div>
 									<img class="image img-fluid" src="{% static 'img/p1.jpg' %}" alt="">
 							</div>
-							<a href="img/p1.jpg" class="img-pop-up">	
+							<a href="{% static 'img/p1.jpg' %}" class="img-pop-up">	
 								<div class="middle">
 								<div class="text align-self-center d-flex"><img src="{% static 'img/preview.png' %}" alt=""></div>
 								</div>
