--- a/home/templates/portfolio.html
+++ b/home/templates/portfolio.html
@@ -10,7 +10,7 @@
 							<h1 class="text-white">
 								Portfolio				
 							</h1>	
-							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="portfolio.html"> Portfolio</a></p>
+							<p class="text-white link-nav"><a href="/">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="portfolio"> Portfolio</a></p>
 						</div>	
 					</div>
 				</div>
@@ -46,7 +46,7 @@
 	                            		<div class="overlay overlay-bg"></div>
 	                            		 <img class="image img-fluid" src="{% static 'img/p1.jpg' %}" alt="">
 	                            	</div>
-									<a href="img/p1.jpg" class="img-pop-up">	
+									<a href="{% static 'img/p1.jpg' %}" class="img-pop-up">	
 									  <div class="middle">
 									    <div class="text align-self-center d-flex"><img src="{% static 'img/preview.png' %}" alt=""></div>
 									  </div>
