--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -153,11 +153,14 @@
 			
 			<div class="filters">
 				<ul>
+				{% for cat in projects  %}
+				
 					<li class="active" data-filter="*">All</li>
-					<li data-filter=".vector">Vector</li>
-					<li data-filter=".raster">Raster</li>
-					<li data-filter=".ui">UI/UX</li>
-					<li data-filter=".printing">Printing</li>
+					<li data-filter="vector">vector</li>
+					<li data-filter="rashtor">raster</li>
+					<li data-filter="ui">ui</li>
+					<li data-filter="printing">printing</li>
+				{% endfor %}
 				</ul>
 			</div>
 			
@@ -404,21 +407,11 @@
 		        <div class="container">
 		            <div class="brand-wrap">
 		                <div class="row align-items-center active-brand-carusel justify-content-start no-gutters">
+							{% for brand in brands  %}
 		                    <div class="col single-brand">
-		                        <a href="#"><img class="mx-auto" src="{% static 'img/l1.png' %}" alt=""></a>
-		                    </div>
-		                    <div class="col single-brand">
-		                        <a href="#"><img class="mx-auto" src="{% static 'img/l2.png' %}" alt=""></a>
-		                    </div>
-		                    <div class="col single-brand">
-		                        <a href="#"><img class="mx-auto" src="{% static 'img/l3.png' %}" alt=""></a>
-		                    </div>
-		                    <div class="col single-brand">
-		                        <a href="#"><img class="mx-auto" src="{% static 'img/l4.png' %}" alt=""></a>
-		                    </div>
-		                    <div class="col single-brand">
-		                        <a href="#"><img class="mx-auto" src="{% static 'img/l5.png' %}" alt=""></a>
-		                    </div>
+								<a href="#"><img class="mx-auto" src="{{brand.image}}" alt="" style="height:100px;"></a>
+								</div>
+							{% endfor %}
 		                </div>
 		            </div>
 		        </div>
